fixes test and convert bytes to string